Updated Kotlin and KSP versions to fix build issues